# CareerPilot-AI

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/workflows/: ci.yml
careerpilot/backend/: cli.py  main.py
careerpilot/backend/api/: dependencies.py  errors.py
careerpilot/backend/config/: settings.py
careerpilot/backend/core/: exceptions.py  logging.py  security.py
careerpilot/backend/database/: base.py  session.py
careerpilot/backend/models/: __init__.py  application.py  company.py  cover_letter.py  email_template.py  email_verification.py  job_listing.py  job_match.py  person.py  user_profile.py
careerpilot/backend/repositories/: application.py  base.py  company.py  cover_letter.py  email_template.py  email_verification.py  job_listing.py  job_match.py  person.py  user_profile.py
careerpilot/backend/schemas/: application.py  company.py  cover_letter.py  email_pattern.py  email_template.py  email_verification.py  job_listing.py  job_match.py  person.py  personalization.py  resume.py  subject.py  user_profile.py
careerpilot/backend/services/: application.py  company.py  people.py  resume.py  user_profile.py
careerpilot/backend/tests/: conftest.py  sample_resume.txt  test_application_api.py  test_application_service.py  test_career_page_detector.py  test_career_page_service.py  test_company_discovery.py  test_company_service.py  test_config_and_security.py  test_cover_letter_generator.py  test_cover_letter_service.py  test_email_pattern_generator.py  test_email_pattern_service.py  test_email_verification_service.py  (+15 more)
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md
scripts/: install-git-hooks.sh
(+56 files in other folders)
