[project]
name = "careerpilot"
version = "0.1.0"
description = "CareerPilot AI — AI-powered Job Search, Referral, Outreach and Follow-up Automation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CareerPilot AI" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0.29",
    "greenlet>=3.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "httpx>=0.27",
    "email-validator>=2.1",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]
# Heavier integrations are pulled in only when the relevant module is built out.
scraping = ["playwright>=1.43", "beautifulsoup4>=4.12", "pandas>=2.2"]
workers = ["celery>=5.3", "redis>=5.0"]
email = ["boto3>=1.34", "google-api-python-client>=2.0", "msal>=1.28"]

[project.scripts]
careerpilot = "careerpilot.backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["careerpilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["careerpilot/backend/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
